# test

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hello_test  install_manifest.txt  pull-test  test-linux  test.sln  test.vcxproj  test.vcxproj.filters
Debug/: vc140.idb
Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
base/: ClientBase.cpp  ClientBase.h  NetHandle.cpp  NetHandle.h  ServerBase.cpp  ServerBase.h  common.h  network.cpp  network.h  study.cpp  study.h
client/include/: Client.h  network.h
client/src/: Client.cpp  main.cpp  network.cpp
hello/: hello.cpp
include/: hello.h
main/: main.cpp
python_test/: aaa.html  main.py
server/include/: Server.h  network.h
server/src/: Server.cpp  main.cpp  network.cpp
