CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(hello)

ADD_DEFINITIONS(-std=c++11)

EXECUTE_PROCESS(COMMAND date OUTPUT_VARIABLE RES_DATE)

MESSAGE(STATUS "source")
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/main/ SOURCE_1)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/hello/ SOURCE_2)

MESSAGE(STATUS "include")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include/")

MESSAGE(STATUS "target(${RES_DATE})")
ADD_EXECUTABLE(hello_test ${SOURCE_1} ${SOURCE_2})

INSTALL(TARGETS hello_test RUNTIME DESTINATION /home/mengfan/project/test/bin)