
SET( CMAKE_BUILD_TYPE Debug )
SET(TARGET_BIN /home/mengfan/project/test)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(hello)

MESSAGE(STATUS "CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lboost_system -std=c++11")
MESSAGE(STATUS "CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}")

EXECUTE_PROCESS(COMMAND date OUTPUT_VARIABLE RES_DATE)

MESSAGE(STATUS "source")
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/main/ SOURCE_1)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/hello/ SOURCE_2)

MESSAGE(STATUS "include")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include/")

MESSAGE(STATUS "target(${RES_DATE})")
ADD_EXECUTABLE(hello_test ${SOURCE_1} ${SOURCE_2})

INSTALL(TARGETS hello_test RUNTIME DESTINATION ${TARGET_BIN}/bin)