
SET( CMAKE_BUILD_TYPE Debug )
SET(TARGET_BIN /home/mengfan/project/test)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(hello)

MESSAGE(STATUS "CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lboost_system -std=c++11")
MESSAGE(STATUS "CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}")

EXECUTE_PROCESS(COMMAND date OUTPUT_VARIABLE RES_DATE)

MESSAGE(STATUS "source")
AUX_SOURCE_DIRECTORY("${CMAKE_SOURCE_DIR}/base/" BASE_SOURCE)
AUX_SOURCE_DIRECTORY("${CMAKE_SOURCE_DIR}/server/src/" SERVER_SOURCE)
AUX_SOURCE_DIRECTORY("${CMAKE_SOURCE_DIR}/client/src/" CLIENT_SOURCE)

MESSAGE(STATUS "include")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/server/include/")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/client/include/")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/base/")

MESSAGE(STATUS "target(${RES_DATE})")
ADD_EXECUTABLE(server ${BASE_SOURCE} ${SERVER_SOURCE})
ADD_EXECUTABLE(client ${BASE_SOURCE} ${CLIENT_SOURCE})

INSTALL(TARGETS server RUNTIME DESTINATION ${TARGET_BIN}/bin)
INSTALL(TARGETS client RUNTIME DESTINATION ${TARGET_BIN}/bin)

